# django-svelte-mvp-starter

./: .gitignore  Makefile  pyproject.toml
apisrv/: manage.py
apisrv/apisrv/: asgi.py  settings.py  urls.py  wsgi.py
apisrv/main/: admin.py  models.py
apisrv/main/migrations/: 0001_initial.py
app/: package-lock.json  settings.py  urls.py
app/spa/: apps.py  views.py
app/static/frontend/: bundle.css  bundle.js  bundle.js.map
app/templates/: home.html
frontend/: package-lock.json  package.json  rollup.config.js
frontend/src/: App.svelte
