[tool.poetry]
name = "thoughtgrove"
version = "0.1.0"
description = "MVP of ThoughtGrove webapp"
authors = ["Rob <robspassky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
whitenoise = "^6.4.0"
djangorestframework = "^3.14.0"
gunicorn = "^20.1.0"
django-allauth = "^0.54.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
